--- a/source/index.scss
+++ b/source/index.scss
@@ -1,11 +1,11 @@
 @import "./styles/Defaults.scss";
-@import "./styles/GameFrame.scss";
+@import "./styles/FrameView.scss";
 
 html
 {
     background-color: #111;
 
-    #game-frame
+    #frame-view
     {
     	background-color: #EEE;
     }
