Added a camera that follows the player.

--- a/source/index.scss
+++ b/source/index.scss
@@ -3,10 +3,5 @@
 
 html
 {
-    background-color: #111;
-
-    #frame-view
-    {
-    	background-color: #EEE;
-    }
+    background-color: black;
 }
